Update Debian copyright file.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
 scrotwm (0.10.0-1) unstable; urgency=low
 
   * New upstream release.
-  * Update Debian copyright file Format: field.
+  * Update Debian copyright file.
   * Update Vcs-* control fields.
   * Various packaging improvements.
 
- -- Andrea Bolognani <eof@kiyuko.org>  Wed, 25 Jan 2012 11:29:15 +0100
+ -- Andrea Bolognani <eof@kiyuko.org>  Sat, 28 Jan 2012 12:20:27 +0100
 
 scrotwm (0.9.34-1) unstable; urgency=low
 
