--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+scrotwm (0.11.0-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Andrea Bolognani <eof@kiyuko.org>  Sat, 11 Feb 2012 00:02:01 +0100
+
 scrotwm (0.10.0-1) unstable; urgency=low
 
   * New upstream release.
