--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,11 @@
 scrotwm (0.11.0-1) unstable; urgency=low
 
   * New upstream release.
+  * 005-use-consistent-naming.diff:
+    - keep the spelling of the software name consistent.
+  * Update Homepage: field accordingly.
 
- -- Andrea Bolognani <eof@kiyuko.org>  Sat, 11 Feb 2012 00:02:01 +0100
+ -- Andrea Bolognani <eof@kiyuko.org>  Sat, 11 Feb 2012 17:40:50 +0100
 
 scrotwm (0.10.0-1) unstable; urgency=low
 
