--- a/spectrwm_pt.1
+++ b/spectrwm_pt.1
@@ -14,13 +14,13 @@
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
 .Dd $Mdocdate$
-.Dt SCROTWM 1
+.Dt SPECTRWM 1
 .Os
 .Sh NOME
-.Nm scrotwm
+.Nm spectrwm
 .Nd gerenciador de janela para o X11
 .Sh SINOPSE
-.Nm scrotwm
+.Nm spectrwm
 .Sh DESCRI\(,C\(~AO
 .Nm
 \('e um gerenciador de janela minimalista que tenta n\(~ao atrapalhar a
@@ -34,7 +34,7 @@ r\('apido.
 Quando o
 .Nm
 inicia, ele l\(^e as configura\(,c\(~oes do seu arquivo de configura\(,c\(~ao,
-.Pa scrotwm.conf .
+.Pa spectrwm.conf .
 Veja a se\(,c\(~ao
 .Sx ARQUIVOS DE CONFIGURA\(,C\(~AO
 logo abaixo.
@@ -63,10 +63,10 @@ logo abaixo para os defaults e as personaliza\(,c\(~oes.
 .Sh ARQUIVOS DE CONFIGURA\(,C\(~AO
 .Nm
 primeiro tenta abrir o arquivo de configura\(,c\(~ao no diret\('orio do usu\('ario,
-.Pa ~/.scrotwm.conf .
+.Pa ~/.spectrwm.conf .
 Se o arquivo n\(~ao estiver dispon\('ivel, ent\(~ao tenta abrir o arquivo de
 configura\(,c\(~ao global
-.Pa /etc/scrotwm.conf .
+.Pa /etc/spectrwm.conf .
 .Pp
 Assim \('e o formato do arquivo:\*(Ltpalavra-chave\*(Gt = \*(Ltconfigura\(,c\(~ao\*(Gt.
 Por exemplo:
@@ -243,7 +243,7 @@ e ser\(~ao substitu\('idas pelos valores na hora em que o programa for executado
 .Pp
 Exemplo:
 .Bd -literal -offset indent
-program[ff] = /usr/local/bin/firefox http://scrotwm.org/
+program[ff] = /usr/local/bin/firefox http://spectrwm.org/
 bind[ff] = Mod+f # Agora Mod+F executa o firefox
 .Ed
 .Pp
@@ -560,10 +560,10 @@ Enviar ao
 .Nm
 um sinal HUP far\('a com que o mesmo seja reiniciado.
 .Sh ARQUIVOS
-.Bl -tag -width "/etc/scrotwm.confXXX" -compact
-.It Pa ~/.scrotwm.conf
+.Bl -tag -width "/etc/spectrwm.confXXX" -compact
+.It Pa ~/.spectrwm.conf
 Configura\(,c\(~oes espec\('ificas do usu\('ario.
-.It Pa /etc/scrotwm.conf
+.It Pa /etc/spectrwm.conf
 Configura\(,c\(~oes globais.
 .El
 .Sh HIST\('ORIA
