--- a/spectrwm.1
+++ b/spectrwm.1
@@ -13,14 +13,14 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: January 25 2012 $
-.Dt SCROTWM 1
+.Dd $Mdocdate: February 15 2012 $
+.Dt SPECTRWM 1
 .Os
 .Sh NAME
-.Nm scrotwm
+.Nm spectrwm
 .Nd window manager for X11
 .Sh SYNOPSIS
-.Nm scrotwm
+.Nm spectrwm
 .Sh DESCRIPTION
 .Nm
 is a minimalistic window manager that tries to stay out of the way so that
@@ -33,7 +33,7 @@ fast.
 When
 .Nm
 starts up, it reads settings from its configuration file,
-.Pa scrotwm.conf .
+.Pa spectrwm.conf .
 See the
 .Sx CONFIGURATION FILES
 section below.
@@ -62,10 +62,10 @@ section below for defaults and customizations.
 .Sh CONFIGURATION FILES
 .Nm
 first tries to open the user specific file,
-.Pa ~/.scrotwm.conf .
+.Pa ~/.spectrwm.conf .
 If that file is unavailable,
 it then tries to open the global configuration file
-.Pa /etc/scrotwm.conf .
+.Pa /etc/spectrwm.conf .
 .Pp
 The format of the file is \*(Ltkeyword\*(Gt = \*(Ltsetting\*(Gt.
 For example:
@@ -315,7 +315,7 @@ fields and will be substituted for values at the time the program is spawned:
 .Pp
 Example:
 .Bd -literal -offset indent
-program[ff] = /usr/local/bin/firefox http://scrotwm.org/
+program[ff] = /usr/local/bin/firefox http://spectrwm.org/
 bind[ff] = Mod+Shift+b # Now Mod+Shift+B launches firefox
 .Ed
 .Pp
@@ -436,7 +436,7 @@ button2
 width_shrink
 .It Cm M-=
 width_grow
-.It Cm M-S-
+.It Cm M-S--
 height_shrink
 .It Cm M-S-=
 height_grow
@@ -622,18 +622,18 @@ These files can be used with the
 setting to load pre-defined key bindings for the specified
 keyboard layout.
 .Pp
-.Bl -tag -width "scrotwm_XX.confXXX" -offset indent -compact
-.It Cm scrotwm_cz.conf
+.Bl -tag -width "spectrwm_XX.confXXX" -offset indent -compact
+.It Cm spectrwm_cz.conf
 Czech Republic keyboard layout
-.It Cm scrotwm_es.conf
+.It Cm spectrwm_es.conf
 Spanish keyboard layout
-.It Cm scrotwm_fr.conf
+.It Cm spectrwm_fr.conf
 French keyboard layout
-.It Cm scrotwm_fr_ch.conf
+.It Cm spectrwm_fr_ch.conf
 Swiss French keyboard layout
-.It Cm scrotwm_se.conf
+.It Cm spectrwm_se.conf
 Swedish keyboard layout
-.It Cm scrotwm_us.conf
+.It Cm spectrwm_us.conf
 United States keyboard layout
 .El
 .Sh QUIRKS
@@ -712,7 +712,9 @@ You can obtain
 .Aq class
 and
 .Aq name
-by running xprop(1) and then clicking on the desired window.
+by running
+.Xr xprop 1
+and then clicking on the desired window.
 In the following example the main window of Firefox was clicked:
 .Bd -literal -offset indent
 $ xprop | grep WM_CLASS
@@ -825,11 +827,11 @@ Sending
 .Nm
 a HUP signal will restart it.
 .Sh FILES
-.Bl -tag -width "/etc/scrotwm.confXXX" -compact
-.It Pa ~/.scrotwm.conf
+.Bl -tag -width "/etc/spectrwm.confXXX" -compact
+.It Pa ~/.spectrwm.conf
 .Nm
 user specific settings.
-.It Pa /etc/scrotwm.conf
+.It Pa /etc/spectrwm.conf
 .Nm
 global settings.
 .El
@@ -849,4 +851,6 @@ was written by:
 .It Cm Tuukka Kataja Aq stuge@xor.fi
 .It Cm Jason L. Wright Aq jason@thought.net
 .It Cm Reginald Kennedy Aq rk@rejii.com
+.It Cm Lawrence Teo Aq lteo@lteo.net
+.It Cm Tiago Cunha Aq tcunha@gmx.com
 .El
