--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,10 @@ spectrwm (1.0.0-1) unstable; urgency=low
 
   * New upstream release.
   * Change package name to be consistent with upstream.
+  * 005-use-consistent-naming.diff:
+    - merged upstream; dropped.
 
- -- Andrea Bolognani <eof@kiyuko.org>  Sun, 19 Feb 2012 18:56:39 +0100
+ -- Andrea Bolognani <eof@kiyuko.org>  Sun, 19 Feb 2012 21:46:46 +0100
 
 scrotwm (0.11.0-1) unstable; urgency=low
 
