--- a/debian/changelog
+++ b/debian/changelog
@@ -7,8 +7,9 @@ spectrwm (1.0.0-1) unstable; urgency=low
     - don't let upstream's build system handle compatibility symlinks.
   * 005-use-consistent-naming.diff:
     - merged upstream; dropped.
+  * Update Standards-Version to 3.9.3 (no changes needed).
 
- -- Andrea Bolognani <eof@kiyuko.org>  Sun, 19 Feb 2012 22:29:10 +0100
+ -- Andrea Bolognani <eof@kiyuko.org>  Mon, 27 Feb 2012 23:49:49 +0100
 
 scrotwm (0.11.0-1) unstable; urgency=low
 
