--- a/debian/changelog
+++ b/debian/changelog
@@ -3,13 +3,15 @@ spectrwm (1.0.0-1) unstable; urgency=low
   * New upstream release.
   * Change package name to be consistent with upstream. Provide a
     transitional package with the old name for compatibility.
+    - Add Pre-Depends: on dpkg (>= 1.15.7.2~) to properly migrate existing
+      custom configuration files.
   * 104-skip-compatibility-symlinks.diff:
     - don't let upstream's build system handle compatibility symlinks.
   * 005-use-consistent-naming.diff:
     - merged upstream; dropped.
   * Update Standards-Version to 3.9.3 (no changes needed).
 
- -- Andrea Bolognani <eof@kiyuko.org>  Mon, 27 Feb 2012 23:49:49 +0100
+ -- Andrea Bolognani <eof@kiyuko.org>  Thu, 01 Mar 2012 23:07:21 +0100
 
 scrotwm (0.11.0-1) unstable; urgency=low
 
