--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+spectrwm (1.1.0-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Andrea Bolognani <eof@kiyuko.org>  Mon, 03 Sep 2012 22:25:48 +0200
+
 spectrwm (1.0.0-1) unstable; urgency=low
 
   * New upstream release.
