Imported Upstream version 1.1.1

--- a/spectrwm.1
+++ b/spectrwm.1
@@ -328,7 +328,7 @@ See the
 .Ic bar_format
 option for more details.
 .It Ic workspace_limit
-Set the total number of workspaces available.  Minimum is 1, maximum is 22.
+Set the total number of workspaces available.  Minimum is 1, maximum is 22, default is 10.
 .El
 .Pp
 Colors need to be specified per the
