--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 spectrwm (2.0.0-1) unstable; urgency=low
 
-  * New upstream release.
+  * New upstream release. Closes: #689226 (please package the
+    latest version)
 
- -- Andrea Bolognani <eof@kiyuko.org>  Sun, 16 Sep 2012 18:48:02 +0200
+ -- Andrea Bolognani <eof@kiyuko.org>  Sun, 30 Sep 2012 23:43:56 +0200
 
 spectrwm (1.0.0-1) unstable; urgency=low
 
