--- a/spectrwm.1
+++ b/spectrwm.1
@@ -94,19 +94,27 @@ such as battery life.
 .It Ic bar_at_bottom
 Place the statusbar at the bottom of each region instead of the top.
 .It Ic bar_border Ns Bq Ar x
-Color of the status bar border in screen
+Border color of the status bar(s) in screen
+.Ar x .
+.It Ic bar_border_unfocus Ns Bq Ar x
+Border color of the status bar(s) on unfocused region(s) in screen
 .Ar x .
 .It Ic bar_border_width
 Set status bar border thickness in pixels.
 Disable border by setting to 0.
 .It Ic bar_color Ns Bq Ar x
-Color of the status bar window in screen
+Background color of the status bar(s) in screen
 .Ar x .
-.It Ic bar_delay
-Update frequency, in seconds, of external script that populates the status
-bar.
 .It Ic bar_enabled
-Enable or disable status bar.
+Set default
+.Ar bar_toggle
+state; default is 1.
+.It Ic bar_enabled_ws Ns Bq Ar x
+Set default
+.Ar bar_toggle_ws
+state on workspace
+.Ar x ;
+default is 1.
 .It Ic bar_font
 Font used in the status bar. Either Xft or X Logical Font Description (XLFD)
 may be used to specify fonts. Fallback fonts may be specified by separating
@@ -215,7 +223,7 @@ This ratio is the screen size to what they will be resized.
 For example, 0.6 is 60% of the physical screen size.
 .It Ic disable_border
 Remove border when bar is disabled and there is only one window on the
-screen.
+region.
 .It Ic focus_close
 Window to put focus when the focused window is closed.
 Possible values are
@@ -310,9 +318,12 @@ same space on the screen.
 Defined in the format screen[<idx>]:WIDTHxHEIGHT+X+Y,
 e.g.\& screen[1]:800x1200+0+0.
 .Pp
-To make a screen span multiple monitors, create a region big enough to cover
-them all, e.g. screen[1]:2048x768+0+0 makes the screen span two monitors with
+To make a region span multiple monitors, create a region big enough to cover
+them all, e.g. screen[1]:2048x768+0+0 makes the region span two monitors with
 1024x768 resolution sitting one next to the other.
+.It Ic region_padding
+Pixel width of empty space within region borders.
+Disable by setting to 0.
 .It Ic spawn_position
 Position in stack to place newly spawned windows.
 Possible values are
@@ -346,6 +357,9 @@ Users may need to set program[term] (see the
 section) to use an alternate copy of the
 .Xr xterm 1
 binary without the setgid bit set.
+.It Ic tile_gap
+Pixel width of empty space between tiled windows.
+Disable by setting to 0.
 .It Ic title_class_enabled
 Enable or disable displaying the window class in the status bar.
 Enable by setting to 1.
@@ -368,7 +382,7 @@ Enable or disable displaying the window name in the status bar.
 Enable by setting to 1.
 .Pp
 To prevent excessively large window names from pushing the remaining text off
-the screen, it's limited to 64 characters, by default.
+the bar, it's limited to 64 characters, by default.
 See the
 .Ic bar_format
 option for more details.
@@ -413,14 +427,8 @@ is the desired program, and
 .Aq arg
 is zero or more arguments to the program.
 .Pp
-The following variables represent settable values in
-.Nm
-(see the
-.Sx CONFIGURATION FILES
-section above),
-and may be used in the
-.Aq arg
-fields and will be substituted for values at the time the program is spawned:
+The following argument variables will be substituted for values at the time the program
+is spawned:
 .Pp
 .Bl -tag -width "$bar_font_color" -offset indent -compact
 .It Cm $bar_border
@@ -429,6 +437,8 @@ fields and will be substituted for values at the time the program is spawned:
 .It Cm $bar_font_color
 .It Cm $color_focus
 .It Cm $color_unfocus
+.It Cm $region_index
+.It Cm $workspace_index
 .El
 .Pp
 Example:
@@ -508,6 +518,8 @@ swap_next
 swap_prev
 .It Cm M-b
 bar_toggle
+.It Cm M-S-b
+bar_toggle_ws
 .It Cm M-x
 wind_del
 .It Cm M-S-x
@@ -516,6 +528,10 @@ wind_kill
 .Pf ws_ Aq Ar 1-22
 .It Cm M-S- Ns Aq Ar 1-9,0,F1-F12
 .Pf mvws_ Ns Aq Ar 1-22
+.It Cm M- Ns Aq Ar Keypad 1-9
+.Pf rg_ Aq Ar 1-9
+.It Cm M-S- Ns Aq Ar Keypad 1-9
+.Pf mvrg_ Aq Ar 1-9
 .It Cm M- Ns Aq Cm Right
 ws_next
 .It Cm M- Ns Aq Cm Left
@@ -527,9 +543,9 @@ ws_prev_all
 .It Cm M-a
 ws_prior
 .It Cm M-S- Ns Aq Cm Right
-screen_next
+rg_next
 .It Cm M-S- Ns Aq Cm Left
-screen_prev
+rg_prev
 .It Cm M-s
 screenshot_all
 .It Cm M-S-s
@@ -624,7 +640,9 @@ Swap with next window in workspace.
 .It Cm swap_prev
 Swap with previous window in workspace.
 .It Cm bar_toggle
-Toggle status bar in all workspaces.
+Toggle overall visibility of status bars.
+.It Cm bar_toggle_ws
+Toggle status bar on current workspace.
 .It Cm wind_del
 Delete current window in workspace.
 .It Cm wind_kill
@@ -641,6 +659,18 @@ Move current window to workspace
 where
 .Ar n
 is 1 through workspace_limit.
+.It Cm rg_ Ns Ar n
+Focus on region
+.Ar n ,
+where
+.Ar n
+is 1 through 9.
+.It Cm mvrg_ Ns Ar n
+Move current window to region
+.Ar n ,
+where
+.Ar n
+is 1 through 9.
 .It Cm ws_next
 Switch to next workspace with a window in it.
 .It Cm ws_prev
@@ -651,10 +681,10 @@ Switch to next workspace.
 Switch to previous workspace.
 .It Cm ws_prior
 Switch to last visited workspace.
-.It Cm screen_next
-Move pointer to next region.
-.It Cm screen_prev
-Move pointer to previous region.
+.It Cm rg_next
+Switch to next region.
+.It Cm rg_prev
+Switch to previous region.
 .It Cm screenshot_all
 Take screenshot of entire screen (if enabled)
 (see
@@ -823,7 +853,7 @@ Allow window to position itself, uncentered.
 .It XTERM_FONTADJ
 Adjust xterm fonts when resizing.
 .It FULLSCREEN
-Remove border to allow window to use full screen size.
+Remove border to allow window to use full region size.
 .It FOCUSPREV
 On exit force focus on previously focused application not previous
 application in the stack.
