Stop building the scrotwm transitional package.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
 spectrwm (2.5.1-1) unstable; urgency=low
 
-  * New upstream release. Closes: #689226 (please package the
-    latest version)
+  * New upstream release.
+    - Closes: #689226 (please package the latest version)
+  * Stop building scrotwm transitional package.
 
- -- Andrea Bolognani <eof@kiyuko.org>  Sun, 10 Aug 2014 16:16:09 +0200
+ -- Andrea Bolognani <eof@kiyuko.org>  Mon, 18 Aug 2014 18:43:27 +0200
 
 spectrwm (1.0.0-1) unstable; urgency=low
 
