--- a/debian/changelog
+++ b/debian/changelog
@@ -7,9 +7,10 @@ spectrwm (2.6.0-1) unstable; urgency=low
     - merged upstream; dropped.
   * U03-improve-english-man-page.diff:
     - merged upstream; dropped.
+  * Move to debhelper compatibility level 9.
   * Update Standards-Version to 3.9.5 (no changes needed).
 
- -- Andrea Bolognani <eof@kiyuko.org>  Mon, 25 Aug 2014 22:55:36 +0200
+ -- Andrea Bolognani <eof@kiyuko.org>  Tue, 26 Aug 2014 21:57:24 +0200
 
 spectrwm (1.0.0-1) unstable; urgency=low
 
