--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+spectrwm (2.6.1-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- Andrea Bolognani <eof@kiyuko.org>  Sat, 09 Apr 2016 20:06:26 +0200
+
 spectrwm (2.6.0-1) unstable; urgency=low
 
   * New upstream release.
