--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ spectrwm (2.6.1-1) unstable; urgency=low
 
   * New upstream release
     - Closes: #772431 (fix FTBFS with ld --as-needed)
+  * U02-update-italian-man-page.diff:
+    - merged upstream; dropped
 
  -- Andrea Bolognani <eof@kiyuko.org>  Sat, 09 Apr 2016 20:06:26 +0200
 
