--- a/debian/changelog
+++ b/debian/changelog
@@ -8,8 +8,9 @@ spectrwm (3.0.2-1) unstable; urgency=low
     - merged upstream; dropped
   * D01-try-versioned-dlopen.diff:
     - simplify and make downstream only
+  * Update Standards-Version to 3.9.8 (no changes needed)
 
- -- Andrea Bolognani <eof@kiyuko.org>  Sun, 26 Jun 2016 17:14:06 +0200
+ -- Andrea Bolognani <eof@kiyuko.org>  Sun, 26 Jun 2016 22:54:10 +0200
 
 spectrwm (2.6.0-1) unstable; urgency=low
 
