Upgrade x-terminal-emulator from Recommends: to Depends:
The original rationale for turning the terminal emulator into a
weak dependency was that it had to be done for the screen locking
program, so might as well piggyback on that effort.

Now that the default screen locking program has been switched to
slock, part of suckless-tools, there is no point in not checking
the default programs on startup: the kind of user that's
interested in running spectrwm will definitely have at least one
terminal emulator installed.

We can drop D03-make-default-programs-optional.diff and get ever
so slightly closer to upstream.

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,12 +10,16 @@ spectrwm (3.0.2-1) unstable; urgency=low
     - merged upstream; dropped
   * D01-try-versioned-dlopen.diff:
     - simplify and make downstream only
+  * D03-make-default-programs-optional.diff:
+    - dropped
   * Use slock as the default screen locking program
+  * Upgrade x-terminal-emulator from Recommends: to Depends:
+    - this improves the out-of-the-box experience
   * Add Depends: on libxt6
     - it is dlopen()ed by libswmhack.so
   * Update Standards-Version to 3.9.8 (no changes needed)
 
- -- Andrea Bolognani <eof@kiyuko.org>  Sun, 17 Jul 2016 13:32:50 +0200
+ -- Andrea Bolognani <eof@kiyuko.org>  Sun, 17 Jul 2016 13:37:13 +0200
 
 spectrwm (2.6.0-1) unstable; urgency=low
 
